# CS839

./: CMakeLists.txt
HW/: CMakeLists.txt
HW/HW01/: CMakeLists.txt  main.cpp
HW/HW02/: AnimatedMesh.h  CGSystemWrapper.h  CGVectorWrapper.h  CMakeLists.txt  ConjugateGradient.h  FiniteElementMesh2D.h  FiniteElementMesh3D.h  LatticeMesh2D.h  LatticeMesh3D.h  main.cpp
